--- a/css/ssstyles.css
+++ b/css/ssstyles.css
@@ -213,7 +213,9 @@ nav a:hover {
             background-color: white;
             color: rgb(231, 61, 92);
         }
-        /*cookies*/
+
+
+ /*cookies*/
 
  #consentBox {
     background: #fff;
@@ -222,9 +224,9 @@ nav a:hover {
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     text-align: center;
     position: fixed;
-    top: 150px;
-    left: 20px;
-    width: 400px;
+    top: 50px;
+    left: 650px;
+    width: 500px;
 }
 
 #consentBox.hide {
@@ -351,4 +353,70 @@ input[type=text], select, textarea {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
+    font-weight: bold;
+  }
+
+/* radio button */
+
+.radio-cont{
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-weight: 400;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* Hide the browser's default radio button */
+  .radio-cont input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+  }
+  
+  /* Create a custom radio button */
+  .radio {
+    position: absolute;
+    top: 3px;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background-color: #eee;
+    border-radius: 50%;
+  }
+  
+  /* On mouse-over, add a grey background color */
+  .radio-cont:hover input ~ .radio {
+    background-color: #ccc;
+  }
+  
+  /* When the radio button is checked, add a blue background */
+  .radio-cont input:checked ~ .radio {
+    background-color: #0a5a83;
+  }
+  
+  /* Create the indicator (the dot/circle - hidden when not checked) */
+  .radio:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* Show the indicator (dot/circle) when checked */
+  .radio-cont input:checked ~ .radio:after {
+    display: block;
+  }
+  
+  /* Style the indicator (dot/circle) */
+  .radio-cont .radio:after {
+       top: 7px;
+      left: 7px;
+      width: 6px;
+      height: 6px;
+      border-radius: 50%;
+      background: white;
   }
